@@ -58,6 +58,9 @@
 - audit copy/scroll and other modes for problems with very small windows
 - screen_draw_* moved out/renamed (accept TTY_*?)
 - get rid of stderr/stdout hacks in log.c
+- chmod +x socket when any client is attached
+- split clients into three RB trees by fd: attached/unattached/dead?
+  or tailqs? what would be fastest per-char?
 
 -- For 0.2 --------------------------------------------------------------------
 - window splitting?
@@ -65,6 +68,7 @@
 - anything which uses cmd_{send,recv}_string will break if the string is
   split. string length should be part of the command size
 - echo \\033[35\;46m\\033[2J last line quirk (with C-b r)
+- quick intro section (tmux new/attach/detach) etc
 
 --------
 kmous -- \E[M
